--- a/Exercises/Development/TSP_Ex.html
+++ b/Exercises/Development/TSP_Ex.html
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 <html data-require="math">
-<head>
+<head data-height="750" data-width="950>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Traveling Salesman Problem</title>
   <script src="../../lib/jquery.min.js"></script>
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="./TSP.css" type="text/css" />
 </head>
-<body>
+<body data-height="750" data-width="950">
 
 <script>
 var
@@ -97,7 +97,7 @@ var clickHandler = function () {
   else {
     On[s] = On[s]+1;
     On[e] = On[e]+1;
-    this.css({"stroke":"blue"});
+    this.css({"stroke":"red"});
     this.addClass('selected');
   }
 
