Minor wording changes in LC highlight exercises

--- a/Exercises/Development/BetaReductionNormHighlight.html
+++ b/Exercises/Development/BetaReductionNormHighlight.html
@@ -22,8 +22,8 @@
 	<div class="problems">
 		<div>
 			<div class="question"><p>This exercise will test your understanding of normal-order &#946;-reduction techniques.
-				First, from left-to-right, identify the parameter that will be substituted in during reduction. Then, from left-to-right,
-				identify all instances of the appropriate variable that the parameter will replace.</p>
+				First, from left-to-right, identify the argument that will be substituted in during reduction. Then, from left-to-right,
+				identify all instances of the appropriate variable in the function body that this argument will replace.</p>
 				<div id="jsav"></div>
 			</div>
 			<div class="solution" data-type="custom">
