--- a/AV/Development/interpolationSearchPRO2.html
+++ b/AV/Development/interpolationSearchPRO2.html
@@ -11,6 +11,9 @@
     .jsavcontainer {
       height: auto;
     }
+    .jsavline {
+      height: 17px;
+    }
     .jsavcanvas {
       height: 302px !important;
       max-height: 302px !important;
@@ -21,6 +24,9 @@
     }
     .jsavhighlight {
       background-color: #fe7 !important;
+    }
+    .returnline {
+      background-color: #def;
     }
     /* bar array */
     .jsavbararray {
@@ -37,15 +43,15 @@
       background-color: transparent;
     }
     .jsavpointer.selected .jsavpointerarea {
-      background-color: #ddf;
+      background-color: #bbf;
     }
     .jsavpointer .jsavlabel {
       position: relative;
       top: 40px;
     }
     .jsavpointer .jsavpointerarea {
-      background-color: #fff;
-      border: 1px solid #555;
+      background-color: #ccc;
+      border: none;
       border-radius: 5px;
       height: 20px;
       width: 20px;
@@ -67,13 +73,19 @@
       text-align: center;
       margin: 10px auto;
       padding: 10px;
-      border: 1px solid #555;
       background-color: #ddd;
       border-radius: 5px;
     }
     #returndone {
       color: #090;
       font-weight: bold;
+    }
+    /* model answer */
+    .jsavmodelanswer .jsavcanvas {
+      min-width: 0 !important;
+    }
+    .jsavmodelanswer .jsavline {
+      height: 50px;
     }
   </style>
 </head>
