Added settings to interpolationSearchPRO2

--- a/AV/Development/interpolationSearchPRO2.html
+++ b/AV/Development/interpolationSearchPRO2.html
@@ -92,6 +92,7 @@
 
 <body>
   <div id="jsavcontainer">
+    <a id="settings" class="jsavsettings" href="#"></a>
     <h1 class="exerciseTitle"></h1>
     <p class="instructLabel"></p>
     <p class="instructions"></p>
