Sped up the animation (with no settings dialog)

--- a/AV/PL/interpreters/lambdacalc/version1.4/interpreter.html
+++ b/AV/PL/interpreters/lambdacalc/version1.4/interpreter.html
@@ -148,7 +148,7 @@
 
 <div class="avcontainer">
   <div class="jsavcontrols"></div>
-  <a id="settings" class="jsavsettings" href="#"></a>
+  <!--a id="settings" class="jsavsettings" href="#"--></a>
   <span class="jsavcounter"></span>
   <p class="jsavoutput jsavline"></p>
   <div class="jsavcanvas"></div>
