Update line setting in BSTremovePRO

--- a/AV/Binary/BSTremovePRO.html
+++ b/AV/Binary/BSTremovePRO.html
@@ -22,6 +22,10 @@
     .jsavcontainer {
       min-height: 540px;
     }
+    .blueline {
+      stroke-width: 4;
+      stroke: blue;
+    }
   </style>
 </head>
 
