--- a/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-bottom.html
+++ b/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-bottom.html
@@ -22,7 +22,7 @@ element.insertBefore(h2,child);
 <div id="main">
 <br/>
 
-<div id="container">
+<div class="avcontainer">
   <div class="jsavcontrols"></div>
   <span class="jsavcounter"></span>
   <p class="jsavoutput jsavline"></p>
@@ -38,6 +38,8 @@ element.insertBefore(h2,child);
 <script src="../../../../../../JSAV/lib/raphael.js"></script>
 <script src="../../../../../../JSAV/build/JSAV.js"></script>
 <script>
+var arr;
+
 function mySplit(s) {
     var output = [];
     var index;
@@ -69,7 +71,6 @@ function myLength(s) {
     }
     return output;
 }
-
 function fillIn(start,end) {
     if (start === end) {
 	return [end];
@@ -79,7 +80,7 @@ function fillIn(start,end) {
 	return a;
     }
 }
-function loadArray(arr,chars) {   
+function loadArray(chars) {   
     for(var index=0; index<chars.length; index++) {
 	arr.value(index,chars[index]);
     }
@@ -87,7 +88,89 @@ function loadArray(arr,chars) {
 	arr.value(index,"");
     }
 }
+function setArrayCellsWidth (highlight,range) {
+    arr.removeClass(true,"oneCharWidth")
+	.removeClass(true,"emptyWidth")
+	.removeClass(true,"lambdaWidth")
+	.removeClass(true,"parenWidth")
+	.addClass(true, "defaultCellStyle")
+	.addClass(oneChar, "oneCharWidth")
+	.addClass(noChar,"emptyWidth")
+	.addClass(lambdaChar,"lambdaWidth")
+	.addClass(parenChar,"parenWidth");
+    if (highlight !== undefined) {
+	if (highlight) {
+	    arr.removeClass(true,"unhighlightCell")
+		.addClass(range, "highlightCell");
+	} else {
+	    arr.removeClass(true,"highlightCell")
+		.addClass(range, "unhighlightCell");
+	}
+    }
+}
+var oneChar = function(x) { return arr.value(x).length === 1; };
+var noChar = function(x) { return arr.value(x).length === 0; };
+var lambdaChar = function(x) { return arr.value(x).length === 3; };
+var parenChar = function(x) { 
+    return arr.value(x) === '(' || arr.value(x) === ')' ||
+	arr.value(x) === ' '; 
+};
+(function buildAV() {
 
+    var exps = reduction_steps;
+    for(var i=0; i<exps.length; i++) {
+         exps[i][0] =  exps[i][0].replace(/\^/g, '\u03BB');
+    }
+    var order = "applicative"			
+    var redexType = order === "applicative" ? "innermost" : "outermost";
+
+    JSAV.ext.SPEED = 50;
+
+    var av = new JSAV($(".avcontainer"));
+    var numCols = Math.max.apply(null, exps.map(function(x) 
+						{ return myLength(x[0]); }));   
+    arr = av.ds.array(fillIn(1,numCols));
+    loadArray(mySplit(exps[0][0]));
+    
+
+    setArrayCellsWidth();
+
+    av.umsg("<h2>Initial \u03BB-expression:</h2>");
+    av.displayInit();
+
+    for(var slide=1; slide<exps.length; slide++) {
+	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
+	av.umsg("<h2>[&beta;-reduction #" + slide + 
+		"] Find the leftmost " + redexType + " \u03B2-redex</h2>");
+	av.step();
+	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
+	av.umsg("<h2>[\u03B2-reduction #" + slide + "] The leftmost " + 
+		  redexType + " \u03B2-redex is highlighted below</h2>");
+	loadArray(mySplit(exps[slide-1][0]));
+	setArrayCellsWidth(true,fillIn(exps[slide][1],exps[slide][2]));
+	av.step();
+	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
+	av.clearumsg();
+	av.umsg("<h2>[\u03B2-reduction #" + slide +
+		"] Reduce the \u03B2-redex</h2>");
+	av.step();
+	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
+	av.umsg("<h2>[\u03B2-reduction #" + slide +
+		"] Completed the \u03B2-reduction</h2>");
+	loadArray(mySplit(exps[slide][0]));
+	setArrayCellsWidth(false,fillIn(exps[slide][1],exps[slide][2]));
+	av.step();
+    }
+    if (exps[0].length > 1) {
+	av.label("<h2>" + exps[0][1] + "</h2>");
+    } else {
+	av.label("<h2>The \u03BB-expression above is in \u03B2-normal form.</h2>");
+    }
+    av.recorded();
+})();
+
+
+/*
 
 (function buildAV() {
     var exps = reduction_steps;
@@ -145,6 +228,7 @@ function loadArray(arr,chars) {
 	    { left: 230, top : 50 });
     av.recorded();
 })();
+*/
 </script>
 </div>
 
