--- a/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-bottom.html
+++ b/AV/PL/interpreters/lambdacalc/slideshows/utils/interpreter-bottom.html
@@ -3,7 +3,7 @@
 <body>
 
 <div id="header">
-<h1><span style="padding-right: 50px">Applicative Order Reduction in the Lambda Calculus</span></h1>
+<h1><span>Applicative Order Reduction in the Lambda Calculus</span></h1>
 <br />
 <span id ="dummy"></span>
 
@@ -121,7 +121,6 @@ var parenChar = function(x) {
     for(var i=0; i<exps.length; i++) {
          exps[i][0] =  exps[i][0].replace(/\^/g, '\u03BB');
     }
-    var order = "applicative"			
     var redexType = order === "applicative" ? "innermost" : "outermost";
 
     JSAV.ext.SPEED = 50;
@@ -168,67 +167,6 @@ var parenChar = function(x) {
     }
     av.recorded();
 })();
-
-
-/*
-
-(function buildAV() {
-    var exps = reduction_steps;
-    for(var i=0; i<exps.length; i++) {
-         exps[i][0] =  exps[i][0].replace(/\^/g, '\u03BB');
-    }
-    var defaultCellStyle =  {"border": "none", "width" : "25px", 
-			     "min-width" : "25px", "box-shadow" : "none" };
-    var oneCharWidth = 	{"width" : "8px", "min-width" : "5px" };
-    var emptyWidth = 	{"width" : "0px", "min-width" : "0px" };
-    var position = { anchor: 'left top', left: 0, top: 0 };
-    var highlightCell = { "background-color" : "#89D" };
-    var unhighlightCell = { "background-color" : "#FFF" };
-    var av = new JSAV("container");
-    var numCols = Math.max.apply(null, exps.map(function(x) 
-						{ return myLength(x[0]); }));
-    var arr = av.ds.array(fillIn(1,numCols));
-    loadArray(arr,mySplit(exps[0][0]));
-    var oneChar = function(x) { return arr.value(x).length === 1; };
-    var noChar = function(x) { return arr.value(x).length === 0; };
-    arr.css(true, defaultCellStyle).css( oneChar, oneCharWidth)
-    .css(noChar,emptyWidth);
-    av.umsg("<h2>Initial \u03BB-expression:</h2>");
-    av.displayInit();
-
-    for(var slide=1; slide<exps.length; slide++) {
-	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
-	av.umsg("<h2>[\u03B2-reduction #" + slide + 
-		"] Find the leftmost innermost \u03B2-redex</h2>");
-	av.step();
-	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
-	av.umsg("<h2>[\u03B2-reduction #" + slide + "] The leftmost " + 
-		"innermost \u03B2-redex is highlighted below</h2>");
-	loadArray(arr,mySplit(exps[slide-1][0]));
-	arr.css(true, defaultCellStyle)
-	    .css(oneChar, oneCharWidth)
-	    .css(noChar,emptyWidth)
-	    .css(fillIn(exps[slide][1],exps[slide][2]), highlightCell);
-	av.step();
-	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
-	av.clearumsg();
-	av.umsg("<h2>[\u03B2-reduction #" + slide +
-		"] Reduce the \u03B2-redex</h2>");
-	av.step();
-	// %%%%%%%%%%%%%%%% new slide %%%%%%%%%%%%%%%%%%%%%%%
-	av.umsg("<h2>[\u03B2-reduction #" + slide +
-		"] Completed the \u03B2-reduction</h2>");
-	loadArray(arr,mySplit(exps[slide][0]));
-	arr.css(true, defaultCellStyle).css(oneChar, oneCharWidth)
-	    .css(noChar,emptyWidth)
-	    .css(true, unhighlightCell);
-	av.step();
-    }
-    av.label("<h2>The \u03BB-expression above is in \u03B2-normal form.</h2>",
-	    { left: 230, top : 50 });
-    av.recorded();
-})();
-*/
 </script>
 </div>
 
