Polish material for advanced recursion tutorial

--- a/Exercises/RecurTutor2/bstMinPROG.html
+++ b/Exercises/RecurTutor2/bstMinPROG.html
@@ -25,13 +25,10 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-    Given a non-empty binary search tree (an ordered binary tree), 
-    return the node that has the minimum value
-    found in that tree. Note that it is not necessary to search the entire tree.
-	Add appropriate lines of code to the following function skeleton so that the function will 
-	recursively  find the node that has the minimum value
-	in the binary search tree pointed at by "root". 
-	 <br />
+      Given a non-empty BST, return a reference to the node that has
+      the minimum value found in that tree.
+      Your function should visit the minimum possible number of
+      nodes.</p>
 
     <textarea  id="codeTextarea">
 BinNode bstMin(BinNode root) {
@@ -46,7 +43,7 @@ BinNode bstMin(BinNode root) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
