--- a/Exercises/RecurTutor2/bstsmallCountPROG.html
+++ b/Exercises/RecurTutor2/bstsmallCountPROG.html
@@ -25,13 +25,11 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-    Given a non-empty binary search tree (an ordered binary tree), 
-    write a recursive function bstsmallCount that given a root to a binary search tree (BST) and a value key, returns the number of nodes having values less than key. 
-    Your function should visit few nodes in the BST as possible. 
-	Add appropriate lines of code to the following function skeleton so that the function will 
-	recursively count the number of nodes having values less than key. 
-	in the binary search tree pointed at by "root". 
-	 <br />
+      Given a non-empty binary search tree (an ordered binary tree), 
+      write a recursive function bstsmallCount that given a root to a
+      binary search tree (BST) and a value "key", returns the number of
+      nodes having values less than key.
+      Your function should visit few nodes in the BST as possible.</p>
 
     <textarea  id="codeTextarea">
 int bstsmallCount(BinNode root , int key) {
@@ -46,7 +44,7 @@ int bstsmallCount(BinNode root , int key) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
