--- a/Exercises/RecurTutor2/btCheckValPROG.html
+++ b/Exercises/RecurTutor2/btCheckValPROG.html
@@ -29,7 +29,10 @@
   </div>
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively find if the passed value exists in the binary tree pointed at by "root" or not.  <br />
+      <p class="problem" id = "test">Write a recursive function that
+      returns true there is a node in the given binary tree with the
+      given value, and false otherwise. Note that thise tree need not
+      be a BST.</p>
 
     <textarea  id="codeTextarea">
 boolean btCheckVal(BinNode root, Comparable value) {
@@ -43,7 +46,7 @@ boolean btCheckVal(BinNode root, Comparable value) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
