--- a/Exercises/RecurTutor2/btCntValPROG.html
+++ b/Exercises/RecurTutor2/btCntValPROG.html
@@ -23,7 +23,9 @@
  
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively count the number of times the passed value exists in the binary tree pointed at by "root".  <br />
+      <p class="problem" id = "test">Write a recursive function that
+      returns the number of times that the given value appears in the
+      binary tree pointed at by "root".</p>
 
     <textarea  id="codeTextarea">
 int btCntVal(BinNode root, Comparable value) {
@@ -38,7 +40,7 @@ int btCntVal(BinNode root, Comparable value) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
