--- a/Exercises/RecurTutor2/btDepthPROG.html
+++ b/Exercises/RecurTutor2/btDepthPROG.html
@@ -23,7 +23,12 @@
   
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> The depth of a binary tree is the maximum length of all paths. Add appropriate lines of code to the following function skeleton so that the function will recursively find the depth of the binary tree pointed at by "root".  <br />
+      <p class="problem" id = "test"> The depth of a binary tree is
+      the length of the path to the deepest node. An empty tree or a
+      tree with a single node has a depth of 0, and a tree with a root
+      node and a single child has a depth of 1. Write a recursive
+      function to find the depth of the binary tree pointed at by
+      "root".</p> 
 
     <textarea  id="codeTextarea">
 int btDepth(BinNode root) {
@@ -37,7 +42,7 @@ int btDepth(BinNode root) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
