--- a/Exercises/RecurTutor2/btIncPROG.html
+++ b/Exercises/RecurTutor2/btIncPROG.html
@@ -30,7 +30,9 @@
   </div>
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively increment by one the data in each node in the binary tree pointed at by "root".  <br />
+      <p class="problem" id = "test">Write a recursive function to
+      increment by one the value for every node in the binary tree
+      pointed at by "root".</p> 
 
     <textarea  id="codeTextarea">
 void btInc(BinNode root) {
@@ -45,7 +47,7 @@ void btInc(BinNode root) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
