--- a/Exercises/RecurTutor2/btLeafPROG.html
+++ b/Exercises/RecurTutor2/btLeafPROG.html
@@ -24,9 +24,11 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively count the  number of leaf nodes in the binary tree pointed at by "root".  <br />
+      <p class="problem" id = "test">Write a recursive function to
+      count the  number of leaf nodes in the binary tree
+      pointed at by "root".</p>
 
-    <textarea  id="codeTextarea">
+      <textarea  id="codeTextarea">
 int btcountLeaf(BinNode root) {
   // Your code goes between these lines
 
@@ -38,7 +40,7 @@ int btcountLeaf(BinNode root) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
