--- a/Exercises/RecurTutor2/btSumAllPROG.html
+++ b/Exercises/RecurTutor2/btSumAllPROG.html
@@ -29,7 +29,9 @@
   </div>
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively to sum of all the data in all the nodes in a tree in the binary tree pointed at by "root".  <br />
+      <p class="problem" id = "test">Write a recursive function that
+      returns the sum for all of the nodes of the
+      binary tree pointed at by "root".</p>
 
     <textarea  id="codeTextarea">
 int btSumAll(BinNode root) {
@@ -44,7 +46,7 @@ int btSumAll(BinNode root) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
