--- a/Exercises/RecurTutor2/btcheckSumPROG.html
+++ b/Exercises/RecurTutor2/btcheckSumPROG.html
@@ -25,11 +25,10 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-Given a binary tree, check if tree satisfies the property of children sum. 
-This property says that for each node sum of its left and 
-right children should be equal to node value.	  
-Add appropriate lines of code to the following function skeleton so that the function will 
-recursively check if tree satisfies the property of children sum on the binary tree pointed at by "root".  <br />
+      Given a binary tree, check if tree satisfies the property of
+      children sum.
+      This property states that for each node, the sum of its left and
+      right subtrees should be equal to node value.</p>
 
     <textarea  id="codeTextarea">
 boolean btcheckSum(BinNode root)
