--- a/Exercises/RecurTutor2/btgetDiffPROG.html
+++ b/Exercises/RecurTutor2/btgetDiffPROG.html
@@ -25,10 +25,10 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-Given a Binary Tree, write a function which calculates the difference between the sum of node values
-at odd levels and sum of node values at even levels. Consider the root node is at height 1.		  
-Add appropriate lines of code to the following function skeleton so that the function will 
-recursively find calcualte that difference on the binary tree pointed at by "root".  <br />
+      Given a binary tree, write a recursive function to return the
+      difference between the sum of node values at odd levels and sum
+      of node values at even levels. Define the root node to be at
+      level 1.</p>
 
     <textarea  id="codeTextarea">
 int btgetDifference(BSTNode root)
@@ -43,7 +43,7 @@ int btgetDifference(BSTNode root)
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
