--- a/Exercises/RecurTutor2/bthasPathSumPROG.html
+++ b/Exercises/RecurTutor2/bthasPathSumPROG.html
@@ -25,15 +25,15 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-    We'll define a "root-to-leaf path" to be a sequence of nodes in a tree starting with the
-    root node and proceeding downward to a leaf (a node with no children). 
-    We'll assume that an empty tree contains  no root-to-leaf paths.     
-    Given a binary tree and a sum, return true if the tree has a root-to-leaf path such that 
-    adding up all the values along the path equals the given sum. 
-    Return false if no such path can be found.   
-	Add appropriate lines of code to the following function skeleton so that the function will 
-	recursively check to find wether there is a "root-to-leaf path" or not 
-	in the binary tree pointed at by "root".  <br />
+	 We'll define a "root-to-leaf path" to be a sequence of nodes
+	 in a tree starting with the root node and proceeding downward
+	 to a leaf (a node with no children).
+	 Define an empty tree to contain no root-to-leaf
+	 paths.      
+	 Given a binary tree and a value "sum", return true if the
+	 tree has a root-to-leaf path such that adding up all the
+	 values along the path equals "sum".
+	 Return false if no such path can be found.</p>
 
     <textarea  id="codeTextarea">
 boolean bthasPathSum(BinNode root , int sum) {
@@ -48,7 +48,7 @@ boolean bthasPathSum(BinNode root , int sum) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
