--- a/Exercises/RecurTutor2/mbtSamePROG.html
+++ b/Exercises/RecurTutor2/mbtSamePROG.html
@@ -24,12 +24,9 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-Given two binary trees, return true if they are structurally identical 
-(they are made of nodes with the same values)
-arranged in the same way.		  
-Add appropriate lines of code to the following function skeleton so that 
-the function will recursively if the binary tree pointed at
- by "root1" and "root2" are the same or not.  <br />
+      Given two binary trees, return true if they are structurally
+      identical (they have nodes with the same values, 
+      arranged in the same way).</p>
 
     <textarea  id="codeTextarea">
 boolean btIdenticalTrees(BSTNode root1, BSTNode root2) {
@@ -44,7 +41,7 @@ boolean btIdenticalTrees(BSTNode root1, BSTNode root2) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
