--- a/Exercises/RecurTutor2/mbtSwapPROG.html
+++ b/Exercises/RecurTutor2/mbtSwapPROG.html
@@ -24,10 +24,10 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-Given two binary trees, swap the values of their nodes.	  
-Add appropriate lines of code to the following function skeleton so that 
-the function will recursively swap the values between the binary trees pointed at
-by "root1" and "root2".  <br />
+      Given two binary trees, swap the values of their nodes.	  
+      Add appropriate lines of code to the following function skeleton
+      so that the function will recursively swap the values between
+      the binary trees pointed at by "root1" and "root2".</p>
 
     <textarea  id="codeTextarea">
 void btSwapTrees(BSTNode root1, BSTNode root2) {
@@ -42,7 +42,7 @@ void btSwapTrees(BSTNode root1, BSTNode root2) {
   // Your code goes between these lines
 
 }
-</textarea></p>
+</textarea>
 
       <div class="question"></div>
       <div class="solution" data-type="custom">
