--- a/Exercises/RecurTutor2/btcheckSumPROG.html
+++ b/Exercises/RecurTutor2/btcheckSumPROG.html
@@ -28,7 +28,13 @@
       Given a binary tree, check if tree satisfies the property of
       children sum.
       This property states that for each node, the sum of its left and
-      right subtrees should be equal to node value.</p>
+      right children should be equal to node value. If a node has only a left or right child
+      then the node should have the same value as its child. Leaf nodes 
+      always satisfy children sum property. It is required to check if 
+      each node in the tree is equals the sum of its left and right children and not
+      its left and right sub-trees. Add appropriate lines of code to the following function skeleton so that the function will 
+	recursively find out if the tree pointed by "root" satisfies the children sum property. 
+      </p>
 
     <textarea  id="codeTextarea">
 boolean btcheckSum(BinNode root)
