Added random generation of lambda expressions to version 1.4

--- a/AV/PL/interpreters/lambdacalc/version1.4/interpreter.html
+++ b/AV/PL/interpreters/lambdacalc/version1.4/interpreter.html
@@ -210,6 +210,7 @@
   <script src="./scripts/grammar.js"></script>
   <script src="./scripts/absyn.js"></script>
   <script src="./scripts/interpreter.js"></script>
+  <script src="./scripts/randomExamples.js"></script>
 </div>
 
 </body>
