Validated CSS in lambda calculus interpreter

--- a/AV/PL/interpreters/lambdacalc/version1.4/interpreter.html
+++ b/AV/PL/interpreters/lambdacalc/version1.4/interpreter.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
     <title>Lambda Calculus interpreter</title>
 
-    <link rel="stylesheet" href="../../../../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" />
+    <link rel="stylesheet" href="../../../../../JSAV/css/JSAV.css" type="text/css"  media="screen" title="no title" />
 
 
-    <style>
+    <style type="text/css">
     html, body {
         margin: 0px;
         background-color: #2AF;
@@ -41,7 +41,7 @@
     #main {
         padding-top:20px;
         height: 100%;
-        left-margin: 0px;
+        margin-left: 0px;
         text-align: center;
     }
     #tests {
