Added two types of incorrect answers to SyntaxTF exercise in lambda calculus chapter

--- a/Exercises/PL/SyntaxTF.html
+++ b/Exercises/PL/SyntaxTF.html
@@ -7,6 +7,7 @@
 	<script src="../../JSAV/lib/jquery.transit.js"></script>
 	<script src="../../JSAV/lib/raphael.js"></script>
 	<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+	<!--script src="../../ODSAkhan-exercises/utils/math.js"></script-->
 	<script src="../../JSAV/build/JSAV-min.js"></script>
 	<script>var LAMBDA = {};</script>
 	<script src="../../AV/PL/interpreters/lambdacalc/version1.4/scripts/absyn.js"></script>
