The correct answer is now automatically selected and connected to the correct button in SyntaxTF exercise

--- a/Exercises/PL/SyntaxTF.html
+++ b/Exercises/PL/SyntaxTF.html
@@ -22,11 +22,7 @@
 <div class="exercise">
 	<div class="vars">
 		<var id="JSAV">init_alpha()</var>
-		<var id="CorrectAnswer">genAnswer()</var>
-		<var id="Option1">alphaChoice()</var>
-		<var id="Option2">alphaChoice()</var>
-		<var id="Option3">alphaChoice()</var>
-		<var id="Option4">alphaChoice()</var>
+		<var id="CorrectAnswer">getAnswerSyntaxTF()</var>
 	</div>
 	<div class="problems">
 		<div>
@@ -34,14 +30,15 @@
 				<div id="jsav"></div>
 			</div>
 			<div class="solution"><var>CorrectAnswer</var></div>
-<ul class="choices" data-category="true">
-    <li><var>"True"</var></li>
-    <li><var>"False"</var></li>
-  </ul>
+			<ul class="choices" data-category="true">
+			  <li><var>"True"</var></li>
+			  <li><var>"False"</var></li>
+			</ul>
 
 			<div class="hints">
-			  <p>Coming soon</p>
-			  <p>Be patient</p>
+			  <p>Remember that parentheses are not optional.</p>
+			  <p>Parentheses must surround every application expression.</p>
+			  <p>Parentheses cannot be used around a &lambda; abstraction.<p>
 			</div>
 		</div>
 	</div>
